<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="topppings">Topppings</string>
    <string name="toast_less_than">You cannot have less than 1 coffee</string>
    <string name="toast_more_than">You cannot have more than 100 coffees</string>

    <!--Thank you message [20 chars or less]-->
    <string name="thank_you">Thank You!</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>


</resources>
